# vllm-apple

./: .gitignore  ENGINE_ARCHITECTURE_NOTES.md  ENGINE_AUDIT_CHECKLIST.md  LICENSE  METAL_BATCH1_PLAN.md  METAL_PLAN.md  METAL_V1.5_RELEASE.md  METAL_V1.6_RELEASE.md  README.md  VALIDATION_REPORT_2025_12_15.md  benchmark_devstral_engine.py  benchmark_smolm_quick.py  profile_batch16.py  pyproject.toml  requirements.txt  test_adaptive_moe.py  test_e2e_batch.py  test_quick.py  test_quick_batch.py  test_qwen3_batch.py  test_scaling.py
benchmarks/: benchmark_engine_complete.py  benchmark_prefill_decode.py  benchmark_throughput.py  test_devstral_24b.py
docs/: BENCHMARK_DEVSTRAL_24B.md  ENGINE_AUDIT_CHECKLIST.md  FINAL_VALIDATION_REPORT_DEVSTRAL.md  GEMM_METAL.md  GRAPH_CAPTURE_DESIGN.md  IMPLEMENTATION_PLAN.md  KNOWLEDGE_BASE.md  METAL_BIBLE.md  METAL_FUSED_PROFILE_QWEN3_30B.md  METAL_PAGED_ATTENTION_SUMMARY.md  METAL_PLAN.md  MOE_READINESS.md  OPTIMIZATION_PLAN.md  PERFORMANCE_OPTIMIZATION_PLAN.md
docs/archive/: MIXED_LENGTH_BUG_DIAGNOSIS.md  STABILITY_VALIDATION_CHECKLIST.md  VALIDATION_REPORT_v2.md
examples/: benchmark_metal_attention.py  metal_kv_cache_demo.py  offline_inference.py
scripts/: compare_decode_logits.py  compare_prefill_direct.py  debug_decode_divergence.py  repro_prefill_divergence.py  run_experiments.sh  run_experiments_small.sh  run_verify_fix.sh
tests/: _test_logits_worker.py  _test_worker.py  test_basic_integration.py  test_e2e_qwen.py  test_fused_kernel.py  test_kv_cache_layout.py  test_memory_calc.py  test_metal_attention.py  test_model_loading.py  test_plugin_registration.py  test_simple_inference.py  test_unit_components.py  test_vllm_integration.py  test_vllm_minimal.py
vllm_apple/: __init__.py  platform.py
(+124 files in other folders)
